2004-02-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.14.1.

2003-04-20  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.11.5.
	* Rules-quot: New file, from gettext-0.11.5.
	* boldquot.sed: New file, from gettext-0.11.5.
	* en@boldquot.header: New file, from gettext-0.11.5.
	* en@quot.header: New file, from gettext-0.11.5.
	* insert-header.sin: New file, from gettext-0.11.5.
	* quot.sed: New file, from gettext-0.11.5.
	* remove-potcdate.sin: New file, from gettext-0.11.5.

2003-01-13  gettextize  <bug-gnu-utils@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.10.40.
